<resources>
    <string name="app_name">Gee</string>
    <string name="activity_name_acerca_de">Sobre Gee</string>
    <string name="activity_name_ponentes_detalle">Datos del ponente</string>

    <string name="app_titulo">GESTIÓN DE EVENTOS ENALLT</string>
    <string name="app_subtitulo">Congreso Internacional de Lenguas, Lingüística y Traducción</string>

    <string name="hint_usuario">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="boton_iniciar_sesion">Iniciar sesión</string>

    <string name="menu_item_inicio">Inicio</string>
    <string name="menu_item_programa">Programa</string>
    <string name="menu_item_ponentes">Ponentes</string>
    <string name="menu_item_asistencia">Asistencia</string>
    <string name="menu_item_mapa">Mapa del lugar</string>
    <string name="menu_item_otros">Otros</string>
    <string name="menu_item_acerca_de">Sobre Gee</string>
    <string name="menu_item_buscar">Buscar</string>
    <string name="busqueda_hint">Escribe un nombre</string>
    <string name="biodata_etiqueta">Biodata</string>
    <string name="biodata_texto">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel nisl id tortor tristique vestibulum vel non nulla. Cras egestas metus nec nisl consequat, nec semper leo lacinia. Integer maximus nulla elit, sed ullamcorper tellus porta eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet tellus dui. Sed nec lorem dignissim, molestie risus vitae, suscipit enim. Nullam ornare luctus diam, nec ullamcorper lorem tempor sed. Praesent sollicitudin molestie elit, eu dapibus felis. Proin pellentesque massa ut leo tincidunt, a vehicula velit tincidunt.\n\n
        Integer eu nulla est. Integer molestie vehicula est, id suscipit nunc tempus euismod. Nam volutpat accumsan purus nec porta. Proin maximus urna eget nisi mattis elementum. In ac risus vitae magna gravida lacinia. Vivamus sit amet sapien a leo bibendum placerat. In ac dolor eros.\n\n
    </string>
    <string name="boton_evaluacion_calificar">Calificar</string>
    <string name="boton_ponencia_agendar">Agendar</string>
    <string name="boton_ponencia_calificar">Calificar</string>
    <string name="calidad_ponencia_etiqueta">Calidad de la ponencia</string>
    <string name="experiencia_ponente_etiqueta">Experiencia del ponente</string>
    <string name="relevancia_ponencia_etiqueta">Relevancia de la ponencia</string>
    <string name="app_version">Versión 0.1.0</string>
    <string name="descripcion_acerca_de">GEE es una aplicación para la gestión de eventos académicos en la Escuela Nacional de Lenguas, Lingüística y Traducción de la UNAM. </string>
    <string name="copyright">© 2018 Escuela Nacional de Lenguas, Lingüística y Traducción</string>
    <string name="desarrolladores_acerca_de">Lic. Emmanuel Antonio García Carrillo\nM. en C. Román Alvar Sánchez Garcia\nIng. José Luis Vázquez Torres</string>
    <string name="graficos_acerca_de">D.G Osmán Lucero Anzures</string>
    <string name="seccion_ponencia_etiqueta">Ponencia</string>
    <string name="seccion_ponente_etiqueta">Ponente</string>
    <string name="seccion_abstract_etiqueta">Abstract</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
